fixed serial speed

--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
     "config":{
-        "cometa":{"ssl":true,"server":"dronekit.cometa.io", "port": 443, "app_key":"70d29d0ee5f66e33db0f"},
+        "cometa":{"ssl":true,"server":"autonomia.cometa.io", "port": 443, "app_key":"80d25d08e5fa6e13fb0a"},
         "app_params":{"debug":false,"telemetry_period":1},
-        "arduino":{"serial":"/dev/ttyUSB0","speed":38500}
+        "arduino":{"serial":"/dev/ttyUSB0","speed":38400}
     },
     "service":{"provider":"VE"},
     "hardware":{"model":"Autonomia","type":"1","version":"001","batch":"","firmware":"001-dev"}
