added video object

--- a/config.json
+++ b/config.json
@@ -1,9 +1,10 @@
 {
     "config":{
-        "cometa":{"ssl":true,"server":"autonomia.cometa.io", "port": 443, "app_key":"80d25d08e5fa6e13fb0a"},
-        "app_params":{"debug":false,"telemetry_period":1},
-        "arduino":{"serial":"/dev/ttyUSB0","speed":38400}
+        "cometa":{"ssl":true, "server":"autonomia.cometa.io", "port": 443, "app_key":"80d25d08e5fa6e13fb0a"},
+        "app_params":{"debug":false, "telemetry_period":15, "neutral_delta":2, "verbose": false},
+        "arduino":{"serial":"/dev/ttyUSB0", "speed":"57700"},
+        "video":{"server":"stream.cometa.io", "port":12345, "auto_start": false, "key":"74DA388EAC6"}
     },
     "service":{"provider":"VE"},
-    "hardware":{"model":"Autonomia","type":"1","version":"001","batch":"","firmware":"001-dev"}
+    "hardware":{"model": "Autonomia", "type":"O", "version":"001", "batch":"", "firmware":"001-dev"}
 }
